[package]
name = "pm"
version = "0.1.0"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
edition = "2018"

[dependencies]
bzip2 = "*"
chrono = "*"
dirs = "*"
filetime = "*"
flate2 = "*"
getopts = "*"
httpdate = "*"
regex = "*"
reqwest = "*"
rusqlite = "*"
serde = "*"
serde_derive = "*"
structopt = "*"
toml = "*"
xz2 = "*"
